Bug 267323 - Global configuration file for powerprofiles missing
Summary: Global configuration file for powerprofiles missing
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Frameworks and Libraries
Component: powermanagement-daemon (show other bugs)
Version: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-28 18:19 UTC by J Brauchle
Modified: 2011-10-31 19:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description J Brauchle 2011-02-28 18:19:06 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

In a multiuser environment, I would like to globally set the PowerDevil power profiles, but it seems like that any '/usr/share/kde4/config/powerdevil2profilesrc' I created is not recognized.

I started the powerdevilprofiles KCM using 'strace -fF -o ~/powerdevilprofiles.debug.txt kcmshell4 powerdevilprofilesconfig' and then did a 'cat ~/powerdevilprofiles.debug.txt | grep "powerdevil2profilesrc"'.

It seems like that it only reads my personal '~/.kde4/share/config/powerdevil2profilesrc' file, but does not even try to find a global one in '/usr/share/kde4/config/...'.

How would I set a global powerprofile otherwise? I need to restrict the users to a predefined powerprofile, such that the users DONT enable standby or hibernate on these network workstations!

Please also remember to recognize the '[$i]' line in the global config file in order to make the power profiles read only for users!

Reproducible: Always

Steps to Reproduce:
1) Create a global '/usr/share/kde4/config/powerdevil2profilesrc'. 
2) start 'kcmshell4 powerdevilprofilesconfig'

Actual Results:  
The global config file is not read, it's settings are not recognized

Expected Results:  
The global config settings should be recognized. If the config file starts with an '[$i]' line, the powerdevil config should be read only for regular users!
Comment 1 Dario Freddi 2011-09-30 20:33:50 UTC
Powerdevil is simply using KSharedConfig::openConfig. So I guess this should be fixed in the libs component. Reassigning.
Comment 2 Oswald Buddenhagen 2011-09-30 21:52:21 UTC
dario, library bug reports are supposed to come with a minimal testcase or an approximate analysis of the problem. *nobody* is going to investigate this, especially given that the config cascading code seems to work just fine otherwise.
in qt, we'd just reject this bug with notenoughinfo, without discussion.

joschi, maybe you played a bit too much with $KDEDIRS?
Comment 3 J Brauchle 2011-10-04 08:04:02 UTC
Hello Oswald,

I am a little surprise by the tone of your answer! Maybe you should think about improving that when dealing with users and their problems...

I did NOT play with any KDE variable at all, this is a completely standard KDE 4.6.0 + OpenSUSE 11.4 installation. You are free to replace the '/usr/share/kde4/config/' path that OpenSUSE is using with the KDE default, and the bug report should still be valid.

I am a mere KDE user and I can confirm that there exists no possibility to my knowledge to create a default powerprofile configuration file for a machine! At least I was unable to find any documentation on how this would be done (at the time I reported the bug). I did not do any further investigations on this issue. Thus, in our environment we restrict the corresponding power settings using a USER configuration file within the USER home (which I think is not a satisfying solution).

So in order to help you find the problem: This is the line that is used to load the powerprofiles config (found here http://web.archiveorange.com/archive/v/bZBuSnCELwh2U5VafyAi):
------
KSharedConfig::openConfig("powerdevilprofilesrc", KConfig::SimpleConfig);
------

Googling the "KConfig::SimpleConfig" term (http://api.kde.org/4.x-api/kdelibs-apidocs/kdecore/html/classKConfig.html#ad1f23964bbf8c11449e92a2596d15f7ea53b71a3aab71b05e8c4a6906ae647052), reveals that this means "Just a single config file". So it looks like there is no config cascading done here!?

Maybe this is now *enoughinfo* for *somebody* to investigate this...
Comment 4 Oswald Buddenhagen 2011-10-04 13:28:33 UTC
nothing to investigate here any more ... you did that already. epic fail in the application code.

"playing" with $KDEDIRS would be something perfectly expected for someone who deals with kiosk features ([$i]), so i don't consider this a particularly outrageous question.
Comment 5 Dario Freddi 2011-10-04 14:09:48 UTC
Git commit 8d59876457387d1c72ca3626ae2d267adf100014 by Dario Freddi.
Committed on 04/10/2011 at 16:09.
Pushed by dafre into branch 'KDE/4.7'.

Use full config when reading settings

BUG: 267323

M  +1    -1    powerdevil/daemon/powerdevilcore.cpp

http://commits.kde.org/kde-workspace/8d59876457387d1c72ca3626ae2d267adf100014
Comment 6 Andrea Scarpino 2011-10-31 19:09:05 UTC
(In reply to comment #5)
> Git commit 8d59876457387d1c72ca3626ae2d267adf100014 by Dario Freddi.
> Committed on 04/10/2011 at 16:09.
> Pushed by dafre into branch 'KDE/4.7'.
> 
> Use full config when reading settings
> 
> BUG: 267323
> 
> M  +1    -1    powerdevil/daemon/powerdevilcore.cpp
> 
> http://commits.kde.org/kde-workspace/8d59876457387d1c72ca3626ae2d267adf100014

Dario, that commit causes BUG285347