Use full config when reading settings

BUG: 267323